Add some missing translations for chat and navbar.

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -14,3 +14,7 @@ login:
     placeholder:
         username: Enter username
         password: Password
+chat:
+    open: Chat
+    title: Chat
+    send: Send
