Add player list to navbar.

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -2,6 +2,7 @@ title: MinePlus
 navbar:
     application: MinePlus
     dashboard: Dashboard
+    players: Players
     login: Login
     logout: Logout
 login:
