Differentiate between User's and Player's internally.
Player's are always instances playing on a gameserver, User's are global.

--- a/src/MinePlus/MainBundle/Resources/translations/messages.en.yml
+++ b/src/MinePlus/MainBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,6 @@
 application: MinePlus
 dashboard: Dashboard
-players: Players
+players: User
 logout: Logout
 profile:
     wallposts: '{0} This user has no wall posts, why dont you create one?'
